# ssb

./: CMakeLists.txt  LICENSE  README.md
src/: application.cpp  application.hpp  assert.hpp  config.h.in  config.hpp  logger.cpp  logger.hpp  main.cpp  resource.h  window.cpp  window.hpp  window_renderer.cpp  window_renderer.hpp  workspace.cpp  workspace.hpp
src_data/: compile_rc.bat  ssb.rc  ssb.res
